--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Gradious - Code Evaluator</title>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="./jwt-decode.js"></script>
     <script src="public/jwt-decode.js"></script>
