--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,8 @@
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="./jwt-decode.js"></script>
     <script src="public/jwt-decode.js"></script>
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
