--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
     -->
     <title>Gradious - Code Evaluator</title>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
-    <script src="./jwt-decode.js"></script>
-    <script src="public/jwt-decode.js"></script>
+  <!--script src="./jwt-decode.js"></script>
+    <script src="public/jwt-decode.js"></script-->
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   </head>
